--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Info Misc
-  hosts: '!snowflake:&!tor'
+  hosts: '!snowflake:!tor'
   roles:
     - role: poweron
     - role: info_common
