fix Debian kernel installations

--- a/playbooks/roles/setup_common/tasks/kernel-bin.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-bin.yaml
@@ -1,16 +1,15 @@
 ---
-- name: Cloud kernel
-  when: kernel_debian_cloud
-  block:
-    - name: Install Cloud kernel
-      ansible.builtin.apt:
-        default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
-        name:
-          - "linux-image-cloud-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
-      notify: "Reboot system"
+- name: Update Debian kernel
+  when: kernel_debian_backports or kernel_debian_cloud
+  ansible.builtin.apt:
+    default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
+    name:
+      - "linux-image{{ kernel_debian_cloud | ternary('-cloud', '') }}-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+  notify: "Reboot system"
 
-    - name: Remove non-Cloud kernel
-      ansible.builtin.apt:
-        name:
-          - "linux-image-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
-        state: absent
+- name: Remove non-Cloud kernel
+  when: kernel_debian_cloud
+  ansible.builtin.apt:
+    name:
+      - "linux-image-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+    state: absent
