--- a/playbooks/roles/setup_common/tasks/kernel-bin.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-bin.yaml
@@ -1,15 +1,15 @@
 ---
-- name: Update Debian kernel
+- name: Install desired Debian kernel flavour
   when: kernel_debian_backports or kernel_debian_cloud
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
     name:
-      - "linux-image{{ kernel_debian_cloud | ternary('-cloud', '') }}-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+      - "linux-image{{ _kernel_cloud }}-{{ _kernel_arch }}"
   notify: "Reboot system"
 
 - name: Remove non-Cloud kernel
   when: kernel_debian_cloud
   ansible.builtin.apt:
     name:
-      - "linux-image-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+      - "linux-image-{{ _kernel_arch }}"
     state: absent
