no log as default

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -23,5 +23,8 @@ display_skipped_hosts = false
 # timer stats (for debug/profiling)
 # callbacks_enabled=ansible.posix.profile_tasks
 
-# would clash with the grep of syslog
+# would clash with any attempt to grep the syslog
 no_target_syslog = True
+
+# shut off local logging to syslog
+no_log = True
