--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,7 +4,7 @@ interpreter_python = /usr/bin/python3
 inventory = ./inventory
 
 forks = 64
-pipelining = True
+pipelining = true
 strategy = ansible.builtin.free
 
 gathering = smart
@@ -23,8 +23,8 @@ display_skipped_hosts = false
 # timer stats (for debug/profiling)
 # callbacks_enabled=ansible.posix.profile_tasks
 
-# would clash with any attempt to grep the syslog
-no_target_syslog = True
+# clashes with any attempt to grep the syslog
+no_target_syslog = true
 
-# shut off local logging to syslog
-no_log = True
+# no log pre default
+no_log = true
