--- a/playbooks/roles/setup_common/tasks/kernel-bin.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-bin.yaml
@@ -13,3 +13,9 @@
     name:
       - "linux-image-{{ _kernel_arch }}"
     state: absent
+
+- name: Ensure kernel crash dumps are made to /tmp
+  ansible.builtin.cron:
+    name: "core debug files"
+    special_time: reboot
+    job: "echo '/tmp/core.\\%e.\\%p.\\%s.\\%t' > /proc/sys/kernel/core_pattern"
