cannot detect Go build changes for now

--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -22,7 +22,7 @@
   register: _lyrebird_patched
 
 - name: Build Lyrebird
-  changed_when: true
+  changed_when: false
   ansible.builtin.command:
     cmd: make build
     chdir: /root/lyrebird
