--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -34,3 +34,10 @@
     mode: a+x
     remote_src: yes
   notify: "Restart Tor"
+
+- name: Allow low port for Lyrebird
+  changed_when: false
+  when: tor_port | int < 1024
+  community.general.capabilities:
+    path: /usr/bin/lyrebird
+    capability: cap_net_bind_service+ep
