--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -11,14 +11,14 @@ tor_debian_target: "" # e.g. "tor-nightly-main-bookworm", default is the stable 
 torrc_config_info: []
 torrc_config_host: []
 
-# safe default: a Tor private bridge
+# safe default: Tor private bridge
 bridge_distribution: "none"
 
-# use a dedicated DDoS solution at servers
+# use a dedicated DDoS solution (usually only at servers)
 firewall_use_ddos: false
 
-# exposes potential sensitive information
+# metrics could expose potential sensitive information
 tor_metrics: false
 
-# cpu consuming
+# CPU consuming
 torutils_metrics: false
