new: info about bridge stats ips

--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -12,6 +12,12 @@
         - onionoo
         - wellknown
 
+    - name: Bridge stats
+      when: bridge_distribution
+      ansible.builtin.import_tasks: bridge-stats.yaml
+      tags:
+        - bridge-stats
+
     - name: Bridge line
       when: bridge_distribution
       ansible.builtin.import_tasks: bridgeline.yaml
