prefix vars with 2x _

--- a/playbooks/roles/setup_tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall.yaml
@@ -2,10 +2,11 @@
 - name: DDoS of obfs4 port
   changed_when: _ddos_obfs4_rules.stdout_lines
   vars:
-    _max: "{{ bridge_distribution | ternary(3, 9) }}"
-    _ipt4_common: "--xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ tor_port }}"
-    _ipt6_common: "--xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ tor_port }}"
-    _hash_limit: "--hashlimit-mode srcip,dstport --hashlimit-above {{ _max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP"
+    __max: "{{ bridge_distribution | ternary(3, 9) }}"
+    __ipt4_common: "--xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ tor_port }}"
+    __ipt6_common: "--xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ tor_port }}"
+    __hash_limit: >-
+        --hashlimit-mode srcip,dstport --hashlimit-above {{ __max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
   ansible.builtin.shell:
     cmd: |-
       set -euf
@@ -17,10 +18,10 @@
     executable: /bin/bash
   register: _ddos_obfs4_rules
   with_items:
-    - "iptables  {{ _ipt4_common }} -m hashlimit {{ _hash_limit }} --hashlimit-srcmask 32 --hashlimit-name tor-ddos"
-    - "ip6tables {{ _ipt6_common }} -m hashlimit {{ _hash_limit }} --hashlimit-srcmask 80 --hashlimit-name tor-ddos6"
-    - "iptables  {{ _ipt4_common }} -m connlimit --connlimit-mask 32 --connlimit-above {{ _max }} -j DROP"
-    - "ip6tables {{ _ipt6_common }} -m connlimit --connlimit-mask 80 --connlimit-above {{ _max }} -j DROP"
+    - "iptables  {{ __ipt4_common }} -m hashlimit {{ __hash_limit }} --hashlimit-srcmask 32 --hashlimit-name tor-ddos"
+    - "ip6tables {{ __ipt6_common }} -m hashlimit {{ __hash_limit }} --hashlimit-srcmask 80 --hashlimit-name tor-ddos6"
+    - "iptables  {{ __ipt4_common }} -m connlimit --connlimit-mask 32 --connlimit-above {{ __max }} -j DROP"
+    - "ip6tables {{ __ipt6_common }} -m connlimit --connlimit-mask 80 --connlimit-above {{ __max }} -j DROP"
 
 - name: ACCEPT TCP to obfs4 port
   ansible.builtin.iptables:
