--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -27,7 +27,7 @@
 - name: Reboot system
   listen: "Reboot system"
   vars:
-    additional_timeout_tor: "{{ tor_port is defined | ternary(30, 0) }}"
+    __additional_timeout_tor: "{{ tor_port is defined | ternary(30, 0) }}"
   ansible.builtin.reboot:
     connect_timeout: 2
-    reboot_timeout: "{{ 50 + additional_timeout_tor | int }}"
+    reboot_timeout: "{{ 50 + __additional_timeout_tor | int }}"
