add reaper cron job for hanging apt update

--- a/playbooks/roles/setup_common/tasks/auto-update.yaml
+++ b/playbooks/roles/setup_common/tasks/auto-update.yaml
@@ -43,7 +43,7 @@
     dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
   notify: "Reload Systemd"
 
-# 2x per day between: 30..55
+# 2x per day between: :30 and :55
 - name: Ensure reboot cron job is present
   ansible.builtin.cron:
     name: "Reboot if services can't be safely restarted and/or kernel was updated"
@@ -58,3 +58,11 @@
       ;
       fi
       "
+
+# 2x per day one hour after :13
+- name: Ensure reaper cron job is present
+  ansible.builtin.cron:
+    name: "Reap a hanging apt process"
+    hour: "{{ 1 + timer_hour | int }},{{ (13 + timer_hour | int) % 24 }}"
+    minute: "13"
+    job: 'pkill -f "apt-get -qq -y update"'
