--- a/playbooks/roles/setup_common/tasks/update.yaml
+++ b/playbooks/roles/setup_common/tasks/update.yaml
@@ -45,6 +45,7 @@
       - gpg-agent
       - htop
       - iptables
+      - minicoredumper
       - needrestart
       - psmisc
       - python3-psutil
@@ -53,3 +54,11 @@
   when: additional_software
   ansible.builtin.apt:
     name: "{{ additional_software }}"
+
+- name: Ensure kernel crash dumps are made using minicoredumper
+  ansible.builtin.cron:
+    name: "core debug files"
+    special_time: reboot
+    job: >-
+      echo '|/usr/sbin/minicoredumper \%P \%u \%g \%s \%t \%h \%e' > /proc/sys/kernel/core_pattern;
+      echo 0x7fffffff > /proc/sys/kernel/core_pipe_limit
