explicitly set the group of a new user

--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -2,6 +2,7 @@
 - name: Add the user
   ansible.builtin.user:
     name: snowflake
+    group: snowflake
 
 - name: Init or update Git repo
   throttle: 20
