--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -18,3 +18,6 @@ node_metrics: false
 
 # apt timer schedules and related cron job
 timer_hour: "{{ 12 | random(seed=seed_host) }}"
+
+# use a dedicated DDoS solution (usually only at servers)
+firewall_use_ddos: false
