restrict mem access

--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -57,6 +57,10 @@
       CONFIG_LOCALVERSION=""
       CONFIG_LOCALVERSION_AUTO=y
 
+      PROC_MEM_ALWAYS_FORCE=n
+      PROC_MEM_FORCE_PTRACE=n
+      PROC_MEM_NO_FORCE=y
+
       CONFIG_BPF=n
 
       CONFIG_NETFILTER_EGRESS=n
