--- a/playbooks/roles/info_common/tasks/issue.yaml
+++ b/playbooks/roles/info_common/tasks/issue.yaml
@@ -8,7 +8,7 @@
           journalctl --since "{{ log_system_since }}" |
             grep -m 1 -A 1000 -F "$issue" |
             while grep " kernel: "; do
-              :
+              : stop after the first non-matching line
             done
         done
   register: _result
@@ -32,7 +32,7 @@
             head -n 1
       register: _config_fname
 
-    - name: Download Linux kernel config file name
+    - name: Download Linux kernel config
       throttle: "{{ jobs }}"
       ansible.builtin.fetch:
         src: "{{ _config_fname.stdout }}"
