--- a/playbooks/roles/info_common/tasks/issue.yaml
+++ b/playbooks/roles/info_common/tasks/issue.yaml
@@ -25,7 +25,7 @@
 
     - name: Get Linux kernel config file name
       changed_when: false
-      failed_when: (_config_fname.stdout | length == 0) or (_config_fname.rc != 0)
+      failed_when: _config_fname.stdout | length == 0 or _config_fname.rc != 0
       ansible.builtin.shell:
         cmd: |-
           ls -t /boot/config-* |
