--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -107,7 +107,7 @@
 
 - name: Allow low port
   changed_when: false
-  when: (tor_port | int < 1024) and (not bridge_distribution)
+  when: tor_port | int < 1024 and not bridge_distribution
   community.general.capabilities:
     path: /usr/bin/tor
     capability: cap_net_bind_service+ep
