fix journalctl grep

--- a/playbooks/roles/info_common/tasks/issue.yaml
+++ b/playbooks/roles/info_common/tasks/issue.yaml
@@ -1,26 +1,29 @@
 ---
-- name: Get issue/s (full report) since {{ log_system_since }}
+- name: Get any issues since {{ log_system_since }}
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      journalctl -g 'BUG:' -g 'oom' --since "{{ log_system_since }}" -q |
-        while read -r issue; do
-          journalctl --since "{{ log_system_since }}" |
-            grep -m 1 -A 1000 -F "$issue" |
-            while grep " kernel: "; do
-              : stop after the first non-matching line
-            done
-        done
+      journalctl --since "{{ log_system_since }}" -q |
+        grep -e 'BUG:' -e 'WARNING:' |
+          while read -r issue; do
+            echo "=="
+            journalctl --since "{{ log_system_since }}" -q |
+              grep -A 1000 -F "$issue" |
+              while grep " kernel: "; do
+                : stop after the first non-matching line
+              done
+            echo
+          done
   register: _result
 
 - name: Findings
   when: _result.stdout
   block:
-    - name: Findings of issue/s since {{ log_system_since }}
+    - name: Findings since {{ log_system_since }}
       delegate_to: localhost
       throttle: "{{ jobs }}"
       ansible.builtin.copy:
-        content: "{{ _result.stdout }}"
+        content: "{{ _result.stdout ~ '\n' }}"
         dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.log"
 
     - name: Get Linux kernel config file name
