--- a/playbooks/roles/info_common/tasks/log-system.yaml
+++ b/playbooks/roles/info_common/tasks/log-system.yaml
@@ -6,7 +6,7 @@
     cmd: |-
       journalctl --since "{{ log_system_since }}" -q |
         grep -m 10 -F \
-          -e 'BUG at' -e 'BUG:' -e 'WARNING:' -e '------------' \
+          -e 'BUG at' -e 'BUG:' -e 'WARNING:' -e '-----------[ cut here ]------------' \
           -e 'Call Trace:' -e 'invoked oom-killer' -e 'RIP:' -e 'status=9/KILL' -e '.service: Failed'
   register: _result
 
