--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -4,7 +4,7 @@
   ansible.builtin.shell:
     cmd: |-
       journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
-        grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed' |
+        grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed' -e 'client connected' |
         tail -n {{ log_lines }}
   register: _result
 
